# tappi

./: .gitignore  README.md  pyproject.toml
browser_py/: __init__.py  cli.py  core.py  js_expressions.py  profiles.py
browser_py/agent/: config.py  decompose.py  loop.py  models.py  research.py  setup.py
browser_py/agent/tools/: browser.py
browser_py/server/: app.py
docs/blog/: browser-tool-benchmark.md  introducing-tappi.md  linkedin-post.md  tappi-web-ui-tutorial.md
install/: install-linux.sh  install-macos.sh  install-windows.ps1  launch-linux.sh  launch-macos.command  launch-windows.bat
mcp-npm/: README.md  package.json
mcpb/: .mcpbignore  manifest.json  pyproject.toml  tappi-0.5.0.mcpb  tappi-0.5.1.mcpb
mcpb/src/: server.py
mcpb/src/tappi/: __init__.py  mcp_server.py
tappi/: __init__.py  cli.py  core.py  js_expressions.py  mcp_server.py  profiles.py
tappi/agent/: __init__.py  config.py  decompose.py  loop.py  models.py  research.py  sessions.py  setup.py
tappi/agent/tools/: __init__.py  browser.py  cron.py  files.py  pdf.py  shell.py  spreadsheet.py
tappi/server/: __init__.py  app.py
tappi/server/static/: app.js  index.html  style.css
