[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tappi"
version = "0.5.4"
description = "Lightweight CDP browser control for Python — with an AI agent that can browse, read PDFs, manage files, and automate tasks."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Azeruddin Sheik", email = "shaihazher@gmail.com" }]
keywords = ["browser", "chrome", "cdp", "automation", "ai", "agent", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Testing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "websockets>=12.0",
    "mcp>=1.0",
    "litellm>=1.40.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "apscheduler>=3.10.0",
    "pymupdf>=1.24.0",
    "weasyprint>=62.0",
    "openpyxl>=3.1.0",
    "boto3>=1.28.0",
]

[project.urls]
Homepage = "https://github.com/shaihazher/tappi"
Repository = "https://github.com/shaihazher/tappi"
Issues = "https://github.com/shaihazher/tappi/issues"

[project.scripts]
tappi = "tappi.cli:main"
bpy = "tappi.cli:main"
